<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendResults">

    <Button
        android:id="@+id/kickoffBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kickoffLbl"
        app:layout_constraintEnd_toStartOf="@+id/endofGameBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/endofGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/endOfGameLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kickoffBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/endof1stbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/end1stQtrLbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kickoffBtn" />

    <Button
        android:id="@+id/endof2ndbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/endOf2ndQtrLbl"
        app:layout_constraintEnd_toStartOf="@+id/endof3rdbtn"
        app:layout_constraintStart_toEndOf="@+id/endof1stbtn"
        app:layout_constraintTop_toBottomOf="@+id/endofGameBtn" />

    <Button
        android:id="@+id/endof3rdbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/endOf3rdQtrLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endof2ndbtn"
        app:layout_constraintTop_toBottomOf="@+id/endofGameBtn" />

    <Button
        android:id="@+id/firstdownbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/firstDownLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endof2ndbtn" />

    <Button
        android:id="@+id/tdbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/touchDownLbl"
        app:layout_constraintEnd_toStartOf="@+id/patbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstdownbtn" />

    <Button
        android:id="@+id/patbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/patLbl"
        app:layout_constraintEnd_toStartOf="@+id/twoptconfbtn"
        app:layout_constraintStart_toEndOf="@+id/tdbtn"
        app:layout_constraintTop_toBottomOf="@+id/firstdownbtn" />

    <Button
        android:id="@+id/twoptconfbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/twoPtConvLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/patbtn"
        app:layout_constraintTop_toBottomOf="@+id/firstdownbtn" />

    <Button
        android:id="@+id/safetybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/safetyLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fieldGoalBtn"
        app:layout_constraintTop_toBottomOf="@+id/patbtn" />

    <EditText
        android:id="@+id/editTweet"
        android:layout_width="215dp"
        android:layout_height="73dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTeamBtn" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sendBtnLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTweet" />

    <Button
        android:id="@+id/homeTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/editHomeRes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveydBtn" />

    <Button
        android:id="@+id/guestTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editGuestRes"
        app:layout_constraintTop_toBottomOf="@+id/fiveydBtn" />

    <EditText
        android:id="@+id/editHomeRes"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editGuestRes"
        app:layout_constraintStart_toEndOf="@+id/homeTeamBtn"
        app:layout_constraintTop_toBottomOf="@+id/fiveydBtn" />

    <EditText
        android:id="@+id/editGuestRes"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guestTeamBtn"
        app:layout_constraintStart_toEndOf="@+id/editHomeRes"
        app:layout_constraintTop_toBottomOf="@+id/fiveydBtn" />

    <Button
        android:id="@+id/fiveydBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fiveYdPtyLbl"
        app:layout_constraintEnd_toStartOf="@+id/tenYardBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safetybtn" />

    <Button
        android:id="@+id/tenYardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tenYdPtyLbl"
        app:layout_constraintEnd_toStartOf="@+id/editGuestRes"
        app:layout_constraintStart_toEndOf="@+id/editHomeRes"
        app:layout_constraintTop_toBottomOf="@+id/safetybtn" />

    <Button
        android:id="@+id/fifteenYardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fifteenYrdPtyLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tenYardBtn"
        app:layout_constraintTop_toBottomOf="@+id/safetybtn" />

    <Button
        android:id="@+id/fieldGoalBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fieldGoalLbl"
        app:layout_constraintEnd_toStartOf="@+id/safetybtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patbtn" />

</android.support.constraint.ConstraintLayout>